BE: optimizations / bugfixes in services,controllers